# specgate

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  binding-schema.json  constants.env  justfile  spec-schema.json  temp_validate.b64
.github/: copilot-instructions.md
rust/: Cargo.toml  clippy.toml  coverage.json  deny.toml  rust-toolchain.toml
rust/crates/: README.j2
rust/crates/annotation-test-runner/: Cargo.toml
rust/crates/annotation-test-runner/src/: lib.rs  main.rs
rust/crates/annotation-test-runner/tests/: harness_validation.rs  rust_annotations_extraction.rs
rust/crates/annotation-trace-runner/: Cargo.toml
rust/crates/annotation-trace-runner/src/: lib.rs  main.rs
rust/crates/annotation-trace-runner/tests/: rust_annotations_runtime.rs
rust/crates/specgate/: Cargo.toml  README.md
rust/crates/specgate-annotations/: Cargo.toml  README.md
rust/crates/specgate-annotations-macros/: Cargo.toml  README.md
rust/crates/specgate-annotations-macros/src/: lib.rs
rust/crates/specgate-annotations/src/: lib.rs
rust/crates/specgate-cli/: Cargo.toml  README.md
rust/crates/specgate-cli/src/: lib.rs  main.rs  run.rs  specgate.cli.rs  validate.rs
rust/crates/specgate-cli/tests/: cli_self_host.rs  specgate_cli_spec.rs
rust/crates/specgate-fixtures/specs/: bad_binding.spec.yaml  binding.yaml  checkpoint_inline.spec.yaml  mismatch_extra_event.spec.yaml  mismatch_second_step.spec.yaml  mismatch_wrong_op.spec.yaml  mock_multi_response.spec.yaml  mock_not_found.spec.yaml  multi_field_capture.spec.yaml  multi_field_capture_reordered.spec.yaml  multi_mutation.spec.yaml  multi_setup.spec.yaml  multi_step.spec.yaml  nested_operations.spec.yaml  result_err.spec.yaml  statemachine_counter.spec.yaml  unrecoverable.spec.yaml  void_operation.spec.yaml
rust/crates/specgate-fixtures/src/: compile_error.rs  lib.rs  missing_operation.rs  missing_setup.rs  mock_field.rs  multi_case.rs  multi_mutation.rs  multi_step.rs  readonly_operation.rs  setup_with_params.rs  statemachine_counter.rs
rust/crates/specgate-harness/: Cargo.toml  README.md  build.rs
rust/crates/specgate-harness/src/: backend.rs  binding.rs  codegen.rs  coverage.rs  discover.rs  harness.rs  interpret.rs  lib.rs  match_traces.rs  mock_backend.rs  mock_backend_tests.rs  scan.rs  spec.rs  specgate.harness.rs  traced_counter.rs  types.rs
rust/crates/specgate-harness/tests/: coverage.rs  discovery_registry_spec.rs  harness_core_spec_tests.rs  harness_self_test.rs  mechanism_proof.rs  specgate_generated.rs  specgate_harness_spec.rs  structured_fixtures.rs
rust/crates/specgate-runtime/: Cargo.toml  README.md
rust/crates/specgate-runtime/src/: lib.rs
rust/crates/specgate-rust-backend/: Cargo.toml
rust/crates/specgate-rust-backend/src/: annotations.rs  backend.rs  generator.rs  lib.rs
rust/crates/specgate-rust-backend/tests/: spec_conformance.rs
rust/crates/specgate-types/: Cargo.toml  README.md
rust/crates/specgate-types/src/: binding_file.rs  lib.rs  report.rs  spec_document.rs
rust/crates/specgate-types/tests/: binding_document_spec.rs  spec_document_spec.rs
rust/crates/specgate/src/: extract.rs  fixture.rs  lib.rs  runtime.rs
rust/crates/specgate/tests/: harness_self_host.rs  harness_spec_dogfood.rs  spec_event_optin.rs
rust/specgate-core/: Cargo.toml
rust/specgate-core/src/: diagnostics.rs  emit.rs  lib.rs  types.rs  validate.rs
rust/specgate-extract/: Cargo.toml
rust/specgate-extract/src/: main.rs
rust/test-fixtures/: dsapisdk-extraction.json
test/rust/: Cargo.toml
test/rust/crates/specgate-coverage-fixture/: Cargo.toml
test/rust/crates/specgate-coverage-fixture/src/: lib.rs
test/rust/crates/specgate-fixtures/: Cargo.toml
test/rust/crates/specgate-fixtures-alt/: Cargo.toml
test/rust/crates/specgate-fixtures-alt/src/: greet.rs  lib.rs
test/rust/crates/specgate-fixtures/specs/: anywhere_event.spec.yaml  async_fetch.spec.yaml  bad_binding.spec.yaml  bad_yaml.spec.yaml  binding.yaml  binding_command.yaml  binding_coverage.yaml  binding_multi.yaml  binding_selfhost.yaml  checkpoint_inline.spec.yaml  command_target.spec.yaml  compile_error.spec.yaml  complex_inputs.spec.yaml  coverage_partial.spec.yaml  cross_dep.spec.yaml  enum_event.spec.yaml  keyword_collision.spec.yaml  level_may_missing.spec.yaml  level_should_missing.spec.yaml  mismatch_missing_event.spec.yaml  mismatch_second_step.spec.yaml  mismatch_wrong_field.spec.yaml  mismatch_wrong_order.spec.yaml  missing_operation.spec.yaml  missing_setup.spec.yaml  missing_target.spec.yaml  mock_field.spec.yaml  mock_multi_response.spec.yaml  mock_not_found.spec.yaml  multi_case.spec.yaml  multi_field_capture.spec.yaml  multi_field_capture_reordered.spec.yaml  multi_file.spec.yaml  multi_mutation.spec.yaml  multi_setup.spec.yaml  multi_step.spec.yaml  multi_toplevel.spec.yaml  named_inputs.spec.yaml  nested_operations.spec.yaml  nested_structured.spec.yaml  (+39 more)
test/rust/crates/specgate-fixtures/src/: anywhere_event.rs  async_fetch.rs  checkpoint_inline.rs  compile_error.rs  complex_inputs.rs  cross_dep.rs  enum_event.rs  keyword_collision.rs  lib.rs  missing_operation.rs  missing_setup.rs  mock_field.rs  mock_multi_response.rs  mock_not_found.rs  multi_case.rs  multi_field_capture.rs  multi_mutation.rs  multi_setup.rs  multi_step.rs  multi_toplevel_a.rs  multi_toplevel_b.rs  named_inputs.rs  nested_operations.rs  nested_structured.rs  operators.rs  option_none.rs  option_some.rs  property_add.rs  readonly_operation.rs  result_err.rs  result_ok.rs  scalar_operators.rs  selfhost.rs  setup_with_params.rs  shared_setup.rs  side_effect_setup.rs  simple_output_setup.rs  stateless_add.rs  statemachine_counter.rs  structured_map.rs  (+5 more)
test/rust/crates/specgate-fixtures/src/multi_file/: farewell.rs  greet.rs  mod.rs
test/rust/crates/specgate-selfhost/: Cargo.toml
test/rust/crates/specgate-selfhost/src/: lib.rs
test/rust/crates/specgate-umbrella-fixture/: Cargo.toml
test/rust/crates/specgate-umbrella-fixture/src/: lib.rs
(+143 files in other folders)
