[workspace]
members = [
    "crates/specgate-types",
    "crates/specgate-runtime",
    "crates/specgate-annotations-macros",
    "crates/specgate-annotations",
    "crates/specgate-harness",
    "crates/specgate-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
regex = "1.12"
specgate-types = { path = "crates/specgate-types" }
specgate-annotations = { path = "crates/specgate-annotations" }
specgate-annotations-macros = { path = "crates/specgate-annotations-macros" }
specgate-runtime = { path = "crates/specgate-runtime" }
specgate-harness = { path = "crates/specgate-harness" }

# Dependencies are fetched from crates.io normally.
