[workspace]
members = [
    "crates/specgate-types",
    "crates/specgate-runtime",
    "crates/specgate-annotations-macros",
    "crates/specgate-annotations",
    "crates/specgate-harness",
    "crates/specgate",
    "crates/specgate-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/schgoo/specgate"
homepage = "https://github.com/schgoo/specgate"
keywords = ["specgate", "testing", "verification", "spec"]
categories = ["development-tools::testing"]
rust-version = "1.93.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
regex = "1.12"
specgate = { path = "crates/specgate", version = "0.1.1" }
specgate-types = { path = "crates/specgate-types", version = "0.1.1" }
specgate-annotations = { path = "crates/specgate-annotations", version = "0.1.1" }
specgate-annotations-macros = { path = "crates/specgate-annotations-macros", version = "0.1.1" }
specgate-runtime = { path = "crates/specgate-runtime", version = "0.1.1" }
specgate-harness = { path = "crates/specgate-harness", version = "0.1.1" }

# Dependencies are fetched from crates.io normally.

[workspace.lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Restriction lints worth enabling
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"

# Allow these — too noisy or not applicable
too_many_lines = "allow"
cognitive_complexity = "allow"
multiple_crate_versions = "allow"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
debug = "line-tables-only"
