[package]
name = "annotation-test-runner"
edition.workspace = true
version.workspace = true

[dependencies]
annotation-trace-runner = { path = "../annotation-trace-runner" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
specgate = { path = "../specgate" }
specgate-types = { path = "../specgate-types" }

[dev-dependencies]
specgate-harness = { path = "../specgate-harness" }
specgate-rust-backend = { path = "../specgate-rust-backend" }
