[package]
name = "specgate-annotations-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for SpecGate annotations"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
