[package]
name = "specgate-annotations"
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
quote = "1.0.40"
specgate = { path = "../specgate" }
syn = { version = "2.0.108", features = ["fold", "full"] }

[dev-dependencies]
serde_json.workspace = true
