[package]
name = "specgate-annotations"
version.workspace = true
edition.workspace = true
description = "Annotation macros for spec-based verification with SpecGate"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
specgate-runtime = { workspace = true }
specgate-annotations-macros = { workspace = true }

[features]
specgate-trace = ["specgate-runtime/specgate-trace"]

[lints]
workspace = true
