[package]
name = "specgate-cli"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "specgate"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
specgate-annotations = { workspace = true }
specgate-harness = { workspace = true }
