[package]
name = "specgate-cli"
edition.workspace = true
version.workspace = true
description = "CLI tool for SpecGate spec validation and test execution"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "specgate"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
specgate-annotations = { workspace = true }
specgate-harness = { workspace = true }

[lints]
workspace = true
