[package]
name = "specgate-harness"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
specgate-runtime = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
specgate-annotations = { workspace = true }
specgate-fixtures = { path = "../../../test/rust/crates/specgate-fixtures" }
