[package]
name = "specgate-harness"
version.workspace = true
edition.workspace = true
description = "Test harness for SpecGate spec-based verification"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
exclude = ["tests/mechanism_proof.rs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specgate-runtime = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
specgate-annotations = { workspace = true }
specgate-fixtures = { path = "../../../test/rust/crates/specgate-fixtures" }

[lints]
workspace = true
