[package]
name = "specgate-harness"
version.workspace = true
edition.workspace = true
description = "Test harness for SpecGate spec-based verification"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
exclude = ["tests/mechanism_proof.rs", "tests/discovery_registry_spec.rs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specgate-runtime = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
specgate = { path = "../specgate" }
specgate-fixtures = { path = "../../../test/rust/crates/specgate-fixtures" }
tempfile = "3"

[lints]
workspace = true
