[package]
name = "specgate-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime trace buffer and Value types for SpecGate annotations"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
linkme = { workspace = true }

[features]
specgate-trace = []

[lints]
workspace = true
