[package]
name = "specgate-rust-backend"
version = "0.1.0"
edition = "2024"

[features]
specgate = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
specgate = { path = "../specgate" }
specgate-annotations = { path = "../specgate-annotations" }
specgate-harness = { path = "../specgate-harness" }
specgate-types = { path = "../specgate-types" }
