[package]
name = "specgate-types"
version.workspace = true
edition.workspace = true
description = "Spec and binding file parsing for SpecGate"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
