[package]
name = "specgate"
version.workspace = true
edition.workspace = true
description = "Deterministic spec-based verification for LLM-implemented code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specgate", "testing", "verification", "spec", "tdd"]
categories = ["development-tools::testing"]
rust-version.workspace = true

[features]
default = []
harness = ["dep:specgate-harness"]
trace = ["specgate-annotations/specgate-trace"]

[dependencies]
specgate-annotations = { workspace = true, public = true }
specgate-harness = { workspace = true, optional = true }

# Enable the `harness` feature in this crate's own tests so the dogfood
# integration test can call the public `specgate::run_spec` API.
[dev-dependencies]
specgate = { path = ".", features = ["harness"] }
serde_yaml = { workspace = true }

[lints]
workspace = true
