[package]
name = "specgate-fixtures"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# The specgate crate provides proc macros + runtime. This crate MUST compile
# successfully — it is a dev-dependency of specgate-harness, so `cargo test`
# in the main workspace forces compilation.
specgate = { path = "../../../../rust/crates/specgate" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
